Fix button label vertical alignment

--- a/client/jetpack-connect/jetpack-new-site/style.scss
+++ b/client/jetpack-connect/jetpack-new-site/style.scss
@@ -231,7 +231,7 @@
 		padding: 18px 40px 18px 20px;
 
 		@include breakpoint( "<660px" ) {
-			padding: 20px 8px 16px;
+			padding: 18px 8px 16px;
 		}
 	}
 
@@ -242,5 +242,9 @@
 		height: 46px;
 		background: $white;
 		border-bottom: 1px solid $gray-light;
+	}
+
+	span {
+		vertical-align: 1px;
 	}
 }
